[package]
name = "hn-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Minimal blocking HTTP client
ureq = { version = "3.1", features = ["json"] }
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
# CLI Argument parsing
clap = { version = "4.5", features = ["derive"] }
# For terminal colors
colored = "3.1"
# For progress bars
indicatif = "0.18"

[dev-dependencies]
serde_json = "1.0"
